<resources>

    <string name="app_name">ThriveRx</string>
    <string name="title_activity_image_processing">ImageProcessing</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh">Refresh</string>
    <string name="Add_document">Add</string>
    <string name="Patient_Icon">Patient_image</string>
    <string name="patient_name">Name</string>
    <string name="patient_number">Phone Number</string>
    <string name="patient_Gender">Gender</string>
    <string name="patient_Age">Age</string>
    <string name="patient_address">Address</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_in">Sign_in</string>
    <string name="title_activity_sing_upactivity">Sing_upactivity</string>
    <string name="title_activity_intro">Intro_activity</string>
    <string name="title_activity_base">BaseActivity</string>
</resources>