<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_Preview">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_recycler_view"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".9"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.51"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/Btn_Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/Btn_Refresh"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".4"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/color_button"
        android:text="@string/refresh"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_recycler_view"
        app:layout_constraintVertical_bias="0.918" />

    <TextView
        android:id="@+id/text_patient_details"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".7"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.07"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:text="Patient Details"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".8"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.26"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/image_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_patient_details"
        app:layout_constraintVertical_bias="0.147">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".3"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/Patient_Icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_" />

            <Button
                android:id="@+id/add_document"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".4"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.3"
                android:layout_marginTop="45dp"
                android:backgroundTint="@color/color_button"
                android:text="@string/Add_document"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/patient_name"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/patient_number"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                tools:text="Number" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/patient_Age"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:text="@string/patient_address"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/patient_Gender"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
